fixed stat spacing

--- a/src/App.css
+++ b/src/App.css
@@ -71,9 +71,6 @@
   padding-bottom: 20px;
   width: 80%;
 }
-.center {
-  margin: 30px 0px 0px 20px;
-}
 
 .searchForm {
   vertical-align: top;
